# Diary

./: .env.example  .gitignore  .pylintrc  AGENTS.md  CLAUDE.md  LICENSE  README.md  build.py  create_large_notebook.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build-executable-win.yml  build-executable.yml
docs/: ARCHITECTURE.md  README.md  SECURITY.md  archive-save-system-plan.md  code_style.md  files.md  input-system.md  lazy-loading.md  overview.md  rendering-system.md  search-feature-changes.md
src/diary/: config.py  logger.py  main.py
src/diary/models/: __init__.py  asset.py  image.py  manifest.py  notebook.py  page.py  page_element.py  point.py  stroke.py  voice_memo.py
src/diary/models/dao/: __init__.py  archive_dao.py  asset_cache.py  legacy_loader.py  migration.py  notebook_dao.py  page_dao.py
src/diary/models/elements/: __init__.py  image.py  stroke.py  text.py  video.py  voice_memo.py
src/diary/search/: __init__.py  index_manager.py  ocr_worker.py  search_engine.py  search_index.py  stroke_rasterizer.py
src/diary/ui/: drawing_canvas.py  input.py  main_window.py  notebook_selector.py  stroke_beautifier.py  toolbar.py  ui_utils.py  utils.py
src/diary/ui/adapters/: __init__.py  image_adapter.py  stroke_adapter.py  text_adapter.py  (+1 more)
src/diary/utils/: backup.py  encryption.py  move.py
tests/: encryption.py  test_archive_dao.py  test_backup_manager.py  test_notebook_dao.py  test_page_elements.py  test_streak_level.py
tests/search/: __init__.py  test_search_engine.py  test_search_index.py  test_stroke_rasterizer.py
(+27 files in other folders)
