[project]
name = "diary"
version = "0.1.0"
description = "A simple Diary application for the paranoid"
authors = [{ name = "Lorenzo", email = "lorenzofumi@gmail.com" }]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
  "pyqt6 (>=6.9.1,<7.0.0)",
  "pydantic-settings (>=2.11.0,<3.0.0)",
  "pytest (>=8.4.2,<9.0.0)",
  "argon2-cffi (>=25.1.0,<26.0.0)",
  "pynacl (>=1.6.0,<2.0.0)",
  "msgpack (>=1.1.2,<2.0.0)",
  "zstd (>=1.5.7.2,<2.0.0.0)",
]

[dependency-groups]
dev = ["pylint (>=4.0.0,<5.0.0)", "mypy (>=1.18.2,<2.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.basedpyright]
reportUnknownMemberType=false
reportUnknownLambdaType=false
reportUnusedFunction=true
venvPath=".venv"
ignore=["**/.venv"]
exclude=["**/AppData/*"]

[[tool.mypy.overrides]]
module = ["msgpack.*"]
follow_untyped_imports = true
